5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1637_1055.log
== TEST (2019-04-09 11:02:06) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = float(input("Angulo: "))
g = 9.8
radians(ang)




-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:30) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = float(input("Angulo: "))
g = 9.8
print(radians(ang))




-- OUTPUT:
0.7941248096574199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:39) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = float(input("Angulo: "))
g = 9.8
print(radians(ang))




-- OUTPUT:
0.7941248096574199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:05:26) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = float(input("Angulo: "))
D = float(input("Distancia: "))
g = 9.8 
radians(ang)

R = (vel**2)*sin(2ang)/g 





-- ERROR:
File "XXXX", line 9
    R = (vel**2)*sin(2ang)/g 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:06:20) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = radians(float(input("Angulo: ")))
D = float(input("Distancia: "))
g = 9.8 

print(ang)







-- OUTPUT:
0.7941248096574199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:06:28) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = radians(float(input("Angulo: ")))
D = float(input("Distancia: "))
g = 9.8 

print(ang)







-- OUTPUT:
0.7941248096574199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:07:10) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = radians(float(input("Angulo: ")))
D = float(input("Distancia: "))
g = 9.8 

R = sin(2ang)






-- ERROR:
File "XXXX", line 8
    R = sin(2ang)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:21) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = radians(float(input("Angulo: ")))
D = float(input("Distancia: "))
g = 9.8 

print(sin2ang)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sin2ang)
NameError: name 'sin2ang' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:34) 
-- CODE:
from math import *

vel = float(input("Velocidade inicial: "))
ang = radians(float(input("Angulo: ")))
D = float(input("Distancia: "))
g = 9.8 

print(sin2ang)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sin2ang)
NameError: name 'sin2ang' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:18) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(sin(a))








-- OUTPUT:
0.9985908724117705
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:48) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = radians(input("Angulo: "))









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:59) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = radians(input("Angulo: "))
print(sin(2a))








-- ERROR:
File "XXXX", line 5
    print(sin(2a))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:09) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = radians(input("Angulo: "))
print(sin2a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:16) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = radians(input("Angulo: "))
print(sin2a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:46) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(radians(sin(2a)))









-- ERROR:
File "XXXX", line 5
    print(radians(sin(2a)))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:00) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(radians(sin2a))








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(radians(sin2a))
NameError: name 'sin2a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:10) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(radians(sin 2a))








-- ERROR:
File "XXXX", line 5
    print(radians(sin 2a))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:12) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(radians(sin 2a))








-- ERROR:
File "XXXX", line 5
    print(radians(sin 2a))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:13) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(radians(sin 2a))








-- ERROR:
File "XXXX", line 5
    print(radians(sin 2a))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:13) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(radians(sin 2a))








-- ERROR:
File "XXXX", line 5
    print(radians(sin 2a))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:20) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))









-- ERROR:
File "XXXX", line 5
    print(radians(sin 2a))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:51) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(sin(a))








-- OUTPUT:
0.9985908724117705
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:58) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(sin(a))








-- OUTPUT:
0.9985908724117705
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:05) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(sin(2*a))








-- OUTPUT:
0.10598751175115685
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:11) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
print(sin(2*a))








-- OUTPUT:
0.10598751175115685
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:22) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
radians(a)








-- OUTPUT:
0.10598751175115685
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:46) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
b = radians(a)

print(sin(2*b))






-- OUTPUT:
0.9998476951563913
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:53) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
b = radians(a)

print(sin(2*b))






-- OUTPUT:
0.9998476951563913
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:11) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
D = float(input("Distancia: "))
g = 9.8
b = radians(a)

R = (v0 ** 2) * (sin(2*b))/g
print(R)




-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:40) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
D = float(input("Distancia: "))
g = 9.8
b = radians(a)

R = (v0 ** 2) * (sin(2*b))/g
print(R)




-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:21:21) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
D = float(input("Distancia: "))
g = 9.8
b = radians(a)

R = (v0 ** 2) * (sin(2*b))/g

if (D - R <= 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"




-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:21:36) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
D = float(input("Distancia: "))
g = 9.8
b = radians(a)

R = (v0 ** 2) * (sin(2*b))/g

if (D - R <= 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)	




-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:21:49) 
-- CODE:
from math import *

v0 = float(input("Velocidade inicial: "))
a = float(input("Angulo: "))
D = float(input("Distancia: "))
g = 9.8
b = radians(a)

R = (v0 ** 2) * (sin(2*b))/g

if (D - R <= 0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)	




-- EXECUTION TIME:
0.137458
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
